--- a/styles/global.style.css
+++ b/styles/global.style.css
@@ -843,7 +843,7 @@ select.form-element{
 	      transition: max-height .2s linear;
 }
 .expandable-content .padding-content{
-	padding: 0 15px 30px;
+	padding: 30px 15px 30px;
 }
 .expandable-item.active .expandable-content{
 	border-color:#EEE;
